--- a/KosaESS/src/main/resources/templates/manager/class_list.html
+++ b/KosaESS/src/main/resources/templates/manager/class_list.html
@@ -29,8 +29,15 @@
 			<div class="search_filter_wrap">
 				<div class="search_filter_inner_wrap">
 					<div class="search_filter_contents_wrap">
+						<div id="search_by_year_wrap">
+							<label class="search_condition_name">연도</label>
+							<select id="select_year">
+								<option th:text="전체" th:value=null/>
+								<option th:each="year:${yearList}" th:text="${year}" th:value="${year}"/>
+							</select>
+						</div>
 						<div id="search_by_name_wrap">
-							<label class="search_condition_name">이름</label>
+							<label class="search_condition_name">프로그램명</label>
 							<input type="text" id="search_by_name">
 						</div>
 						<div id="search_by_status_wrap">
@@ -50,17 +57,17 @@
 						</div>
 					</div>
 					<div class="search_btn_wrap">
-						<input type="button" id="search_reset_btn" value="초기화" onclick="reset()">
-						<input type="button" id="search_by_name_btn" value="검색" onclick="search()">
+						<button id="search_reset_btn" onclick="reset()"><img th:src="@{/img/reset_white.png}"><span>초기화</span></button>
+						<button id="search_by_name_btn"onclick="search()"><img th:src="@{/img/search_white.png}"><span>검색</span></button>
 					</div>
 				</div>
 			</div>
 			<!-- End 검색 필터 부분 -->
-				<div class="result_count">
-					<span>총&nbsp;</span>
-					<span th:text="${resultCount}" id="result_count"></span>
-					<span>&nbsp;건</span>
-				</div>
+			<div class="table_controller">
+				<span>총&nbsp;</span>
+				<span th:text="${resultCount}" id="result_count"></span>
+				<span>&nbsp;건</span>
+			</div>
 			<!-- 컨텐츠 리스트 부분 -->
 			<div class="content_list">
 				<table id="class_list_table" class="content_list_table">
