--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -40,6 +40,10 @@
 						교육과정<span class="star">*</span>
 					</div>
 					<div class="search_filter_input">
+						<select id="select_year">
+							<option th:text="전체" th:value=null/>
+							<option th:each="year:${yearList}" th:text="${year}" th:value="${year}"/>
+						</select>
 						<select id="classId">
 							<option value="" disabled selected>교육과정을 선택하세요</option>
 							<option th:each="class:${classList}" th:text="${class.clssNm}"
@@ -77,10 +81,8 @@
 				</div>
 				<!-- 검색 버튼 -->
 				<div class="search_filter_btn_wrap">
-					<button class="search_reset_btn" th:id="resetButton"
-						onclick="reset()">초기화</button>
-					<button class="search_filter_btn" th:id="searchButton"
-						onclick="search()">검색</button>
+					<button class="search_reset_btn" th:id="resetButton" onclick="reset()"><img th:src="@{/img/reset_white.png}"><span>초기화</span></button>
+					<button class="search_filter_btn" th:id="searchButton" onclick="search()"><img th:src="@{/img/search_white.png}"><span>검색</span></button>
 				</div>
 				<!-- End : 검색 버튼 -->
 			</div>
