--- a/KosaESS/src/main/resources/templates/manager/wlog_list.html
+++ b/KosaESS/src/main/resources/templates/manager/wlog_list.html
@@ -44,8 +44,14 @@
 			<div class="search_filter_table">
 				<div class="search_filter_name">교육과정</div>
 				<div class="search_filter_input">
+					<select id="select_year">
+						<option th:text="전체" th:value=null/>
+						<option th:each="year:${yearList}" th:text="${year}" th:value="${year}"/>
+					</select>
+				</div>
+				<div class="search_filter_input">
 					<select id="class_selector">
-						<option value="" disabled selected>교육과정을 선택하세요</option>
+						<option value="" selected>교육과정을 선택하세요</option>
 						<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class}" />
 					</select>
 				</div>
@@ -83,8 +89,8 @@
 			</div>
 			<!-- 검색 버튼 -->
 			<div class="search_btn_wrap">
-				<input type="button" id="search_reset_btn" value="초기화" onclick="reset()">
-				<input type="button" id="search_by_name_btn" value="검색" onclick="search()">
+				<button id="search_reset_btn" onclick="reset()"><img th:src="@{/img/reset_white.png}"><span>초기화</span></button>
+				<button id="search_by_name_btn" onclick="search()"><img th:src="@{/img/search_white.png}"><span>검색</span></button>
 			</div>
 			<!-- End : 검색 버튼 -->
 		</div>
