[dabin][#add] 아이디 비밀번호 찾기

--- a/KosaESS/src/main/resources/templates/include/student_footer.html
+++ b/KosaESS/src/main/resources/templates/include/student_footer.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="footer">
 	<footer>
-		<div class="container" style="margin-bottom: 0;">
+		<div class="container" style="margin: 0; padding-bottom:0;">
 			<div class="footerBody">
 				<div class="footerImg">
 					<a th:href="@{/student}"><img th:src="@{/img/footer_logo.png}"
