--- a/KosaESS/src/main/resources/templates/signup.html
+++ b/KosaESS/src/main/resources/templates/signup.html
@@ -146,9 +146,9 @@
 				</div>
 
 				<div style="margin-top: 35px;">
-					<!--휴대전화-->
+					<!--연락처-->
 					<h3>
-						휴대전화<span class="star">*</span>
+						연락처<span class="star">*</span>
 					</h3>
 					<span class="signup-input"> <select id="signup-country"
 						class="selectbox" name="country" onchange="">
