--- a/KosaESS/src/main/resources/static/css/student/main.css
+++ b/KosaESS/src/main/resources/static/css/student/main.css
@@ -1,3 +1,7 @@
+body {
+	background-color: #0e588104;
+}
+
 .maintext {
 	display: flex;
 	flex-direction: column;
@@ -72,8 +76,7 @@ body {
 .container {
 	padding: 0px 8%;
 	margin-top: 100px;
-	margin-bottom: 3%;
-	background-color: #0e588104;
+	padding-bottom: 3%;
 }
 
 .maincontent {
@@ -139,7 +142,7 @@ table td {
 	align-items: center;
 }
 
-.login a {
+.login a, #find span {
 	color: #0E5881;
 	margin: 5px 0px;
 }
@@ -164,7 +167,7 @@ input::placeholder {
 	color: #B5B6BA;
 }
 
-.loginBtn {
+.loginBtn, #fId, #fPwd {
 	background: #0E5881;
 	color: white;
 	margin: 2% auto;
@@ -256,7 +259,7 @@ input::placeholder {
 	margin-top: 2%;
 }
 
-.login span {
+.login span, #find span {
 	font-weight: bold;
 }
 
@@ -267,4 +270,27 @@ input::placeholder {
 
 .banner-button.active {
 	background: white; /* 활성화된 버튼의 배경색을 변경 */
+}
+
+.findBox {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.findBox input {
+	width: 70%;
+}
+
+.findPwd {
+	display: none;
+}
+
+.findPwd input, .findId input {
+	padding: 15px;
+	margin: 5px 0;
+	border: 0;
+	font-size: 15px;
+	font-weight: bold;
+	border-radius: 10px;
 }
