[dabin][#update]전화번호 -자동생성

--- a/KosaESS/src/main/resources/templates/admin/insert_manager_popup.html
+++ b/KosaESS/src/main/resources/templates/admin/insert_manager_popup.html
@@ -30,7 +30,7 @@
 			<tr class="input_wrap">
 				<th><span class="title">연락처<span class="red">*</span></span></th>
 				<td><input type="text" onkeyup="if(window.event.keyCode==13){insertManager()}"
-				class="input_manager_tel" placeholder="전화번호" oninput="autoHyphen(this)" maxlength="13" 
+				class="input_manager_tel" placeholder="연락처" oninput="autoHyphen(this)" maxlength="13" 
 				></td>
 			</tr>
 		</table>
